@@ -12,6 +12,12 @@ hspace="10" width="100" height="100" alt="B"></a>Release Notes</h1>
 	<li>Updated the source headers to reference the Mini-XML license and its
 	exceptions to the LGPL2 (STR #108)</li>
 
+      	<li>Added a new mxmlFindValue() function to find the value node of a
+      	named element (STR #110)</li>
+
+	<li>Building a static version of the library did not work on Windows
+	(STR #112)</li>
+
 	<li>The shared library did not include a destructor for the thread-
 	specific data key on UNIX-based operating systems (STR #103)</li>
 
